--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,27 +62,6 @@ test:
   script:
   - go test -v ./...
 
-deploy:
-  stage: deploy
-  image: alpine:latest
-  tags:
-  - playground-bravo
-  needs:
-  - job: test
-  - job: check_sast
-  before_script:
-  - apk add --no-cache git openssh-client
-  - eval $(ssh-agent -s)
-  - echo "$DOKKU_SSH_PRIVATE_KEY_B64" | base64 -d | tr -d '\r' | ssh-add -
-  - mkdir -p ~/.ssh
-  - chmod 700 ~/.ssh
-  - echo "$DOKKU_HOST_KEY" >> ~/.ssh/known_hosts
-  script:
-  - git remote add dokku dokku@$DOKKU_HOST:csy-helper-bot || true
-  - git push dokku HEAD:main --force
-  rules:
-  - if: $CI_COMMIT_BRANCH == "master"
-
 semgrep-sast:
   stage: static-test
   tags:
@@ -117,3 +96,25 @@ check_sast:
   rules:
   - if: $CI_COMMIT_BRANCH == "master"
   - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+
+deploy:
+  stage: deploy
+  image: alpine:latest
+  tags:
+  - playground-bravo
+  needs:
+  - job: test
+  - job: check_sast
+  before_script:
+  - apk add --no-cache git openssh-client
+  - eval $(ssh-agent -s)
+  - echo "$DOKKU_SSH_PRIVATE_KEY_B64" | base64 -d | tr -d '\r' | ssh-add -
+  - mkdir -p ~/.ssh
+  - chmod 700 ~/.ssh
+  - echo "$DOKKU_HOST_KEY" >> ~/.ssh/known_hosts
+  script:
+  - git remote add dokku dokku@$DOKKU_HOST:csy-helper-bot || true
+  - git push dokku HEAD:main --force
+  rules:
+  # TODO change back to master once done
+  - if: $CI_COMMIT_BRANCH == "unknown"
