--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -187,6 +187,7 @@ deploy:
   needs:
     - job: test
     - job: check_sast
+    - job: lint
   before_script:
     # OPTIMIZED: Only install openssh-client (git already included)
     - apk add --no-cache openssh-client
@@ -196,8 +197,7 @@ deploy:
     - chmod 700 ~/.ssh
     - echo "$DOKKU_HOST_KEY" >> ~/.ssh/known_hosts
   script:
-    - git remote add dokku dokku@$DOKKU_HOST:csy-helper-bot || true
+    - git remote add dokku dokku@$DOKKU_HOST:expense-bot || true
     - git push dokku HEAD:main --force
   rules:
-    # TODO change back to master once done
-    - if: $CI_COMMIT_BRANCH == "unknown"
+    - if: $CI_COMMIT_BRANCH == "master"
