--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -200,6 +200,6 @@ deploy:
   script:
     - git remote add dokku dokku@$DOKKU_HOST:expense-bot || true
     - git remote -v
-    - git push dokku HEAD:master --force
+    - git push dokku HEAD:refs/heads/master --force
   rules:
     - if: $CI_COMMIT_BRANCH == "master"
