--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,16 +45,15 @@ jobs:
       - uses: actions/checkout@v6
 
       - name: Set up Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v6
         with:
           go-version: ${{ env.GO_VERSION }}
           cache: true
 
-      - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v8
+      - name: RUn golangci-lint
+        uses: golangci/golangci-lint-action@v9
         with:
-          version: v2.1.6
-          args: --timeout=5m
+          version: v2.6
 
   fmt-check:
     name: Format Check
