--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,13 +86,17 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     needs: [secret-detection, lint]
+    env:
+      POSTGRES_USER: test
+      POSTGRES_PASSWORD: ${{ secrets.TEST_DB_PASSWORD }}
+      POSTGRES_DB: expense_bot_test
     services:
       postgres:
         image: postgres:18-alpine
         env:
-          POSTGRES_USER: test
-          POSTGRES_PASSWORD: test
-          POSTGRES_DB: expense_bot_test
+          POSTGRES_USER: ${{ env.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ env.POSTGRES_DB }}
         ports:
           - 5432:5432
         options: >-
@@ -111,7 +115,7 @@ jobs:
 
       - name: Run tests with coverage
         env:
-          TEST_DATABASE_URL: postgres://test:test@localhost:5432/expense_bot_test?sslmode=disable
+          TEST_DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}?sslmode=disable
         run: make test-coverage
 
       - name: Check coverage threshold
