ci: add a new flag for secret scan

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         uses: trufflesecurity/trufflehog@main
         with:
           path: ./
-          extra_args: --only-verified
+          extra_args: --only-verified --trust-local-git-config
 
   sast:
     name: SAST (Semgrep)
