--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,15 +89,15 @@ jobs:
     needs: [secret-detection, lint]
     env:
       POSTGRES_USER: test
-      POSTGRES_PASSWORD: ${{ secrets.TEST_DB_PASSWORD }}
+      POSTGRES_PASSWORD: ${{ secrets.TEST_DB_PASSWORD || 'test' }}
       POSTGRES_DB: expense_bot_test
     services:
       postgres:
         image: postgres:18-alpine
         env:
-          POSTGRES_USER: ${{ env.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
-          POSTGRES_DB: ${{ env.POSTGRES_DB }}
+          POSTGRES_USER: test
+          POSTGRES_PASSWORD: ${{ secrets.TEST_DB_PASSWORD || 'test' }}
+          POSTGRES_DB: expense_bot_test
         ports:
           - 5432:5432
         options: >-
