ci: make test job requires check_sast too

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -142,6 +142,7 @@ test:
   needs:
     - job: check_secrets
     - job: lint
+    - job: check_sast
   services:
     - name: postgres:18-alpine
       alias: postgres
