--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
           fetch-depth: 0
 
       - name: Gitleaks Secret Scan
-        run: gitleaks detect --source . --verbose
+        uses: gitleaks/gitleaks-action@v2
 
   sast:
     name: SAST (Semgrep)
