fix(ci): add Go setup step for gosec
Gosec action requires Go to be installed to analyze packages.
Add actions/setup-go step before running gosec scanner.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,12 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
+      - name: Set up Go
+        uses: actions/setup-go@v6
+        with:
+          go-version: stable
+          cache: true
+
       - name: Run Gosec Security Scanner
         uses: securego/gosec@master
         with:
