chore(ci): add clarifying comment to gosec step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
+      # Install gosec directly using host Go (not Docker action)
       - name: Install gosec
         run: |
           if ! command -v gosec &>/dev/null; then
