fix(ci): fix gosec SARIF format and update CodeQL action
- Add jq step to remove invalid relationships field from SARIF output
- Update codeql-action/upload-sarif from v2 to v3
- Fixes 'instance.runs[0].tool.driver.rules[0].relationships[0] is not of a type(s) object' error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,12 @@ jobs:
       - name: Run Gosec Security Scanner
         run: gosec -fmt sarif -out results.sarif ./...
 
+      - name: Fix SARIF format for CodeQL
+        run: |
+          # Remove invalid relationships field that causes validation errors
+          jq 'walk(if type == "object" and has("relationships") then del(.relationships) else . end)' results.sarif > results-fixed.sarif
+          mv results-fixed.sarif results.sarif
+
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
         with:
