--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install gitleaks
         run: |
           if ! command -v gitleaks &>/dev/null; then
-            curl -sSfL https://github.com/gitleaks/gitleaks/releases/latest/download/gitleaks_8.30.0_linux_x64.tar.gz | \
+            curl --proto "=https" --tlsv1.2 -sSf -L https://github.com/gitleaks/gitleaks/releases/latest/download/gitleaks_8.30.0_linux_x64.tar.gz | \
               tar -xz -C /usr/local/bin gitleaks
           fi
 
