--- a/runner/Dockerfile
+++ b/runner/Dockerfile
@@ -10,10 +10,10 @@ USER root
 RUN apt-get update && apt-get install -y --no-install-recommends jq && \
     rm -rf /var/lib/apt/lists/*
 
-RUN mkdir -p /opt/hostedtoolcache/go/${GO_VERSION}/x64 && \
+RUN mkdir -p "/opt/hostedtoolcache/go/${GO_VERSION}/x64" && \
     curl --proto "=https" --tlsv1.2 -sSf -L "https://go.dev/dl/go${GO_VERSION}.linux-amd64.tar.gz" | \
-    tar -xz -C /opt/hostedtoolcache/go/${GO_VERSION}/x64 --strip-components=1 && \
-    touch /opt/hostedtoolcache/go/${GO_VERSION}/x64.complete
+    tar -xz -C "/opt/hostedtoolcache/go/${GO_VERSION}/x64" --strip-components=1 && \
+    touch "/opt/hostedtoolcache/go/${GO_VERSION}/x64.complete"
 
 ENV PATH="/opt/hostedtoolcache/go/${GO_VERSION}/x64/bin:/opt/hostedtoolcache/go/${GO_VERSION}/x64/packages/bin:${PATH}" \
     GOPATH="/opt/hostedtoolcache/go/${GO_VERSION}/x64/packages" \
